# ai-worklog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/agents/: worklog-setup.agent.md
.github/workflows/: ci.yml
demo/: _deep_scan.py  _explore_db.py  _explore_global.py  _explore_sessions.py  _extract_clean.py  _extract_convo.py  _extract_copilot_convo.py  _inspect_copilot_session.py  _inspect_session.py  _scan_all_keys.py  _study_format.py  run_demo.ps1  seed_demo_data.py  terminalizer.yml  worklog-demo.yml
instructions/: copilot-worklog-instruction.md
tests/: conftest.py  test_cli.py  test_formatters.py  test_models.py  test_scanners.py  test_storage.py  test_summarizer.py
worklog/: __init__.py  claude_scanner.py  cli.py  codex_scanner.py  formatters.py  models.py  scanners.py  storage.py  summarizer.py  vscode_scanner.py
worklog/instructions/: claude-worklog-instruction.md  codex-worklog-instruction.md
