[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog"
version = "0.3.0"
description = "A local-first CLI that tracks and summarizes your work across AI/agentic sessions for performance reviews and self-assessment"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "platformdirs>=4.0",
]

[project.scripts]
worklog = "worklog.cli:main"

[project.urls]
Repository = "https://github.com/vishwas-sr/ai-worklog"
Issues = "https://github.com/vishwas-sr/ai-worklog/issues"
Documentation = "https://github.com/vishwas-sr/ai-worklog#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
worklog = ["instructions/*.md"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"worklog/formatters.py" = ["E501"]  # HTML templates have long lines by nature

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
